Fixat Gateways och admin knappar

--- a/SnackisWebApp/appsettings.json
+++ b/SnackisWebApp/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SnackisWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SnackisWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "SnackisAPI": "https://localhost:44389/api"
 }
