--- a/SnackisWebApp/appsettings.json
+++ b/SnackisWebApp/appsettings.json
@@ -10,5 +10,5 @@
   "ConnectionStrings": {
     "SnackisWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SnackisWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "SnackisAPI": "https://localhost:44389/api"
+  "SnackisAPI": "https://localhost:44389/api";
 }
