--- a/SnackisWebApp/appsettings.Development.json
+++ b/SnackisWebApp/appsettings.Development.json
@@ -6,5 +6,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "SnackisWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SnackisWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "SnackisAPI": "https://localhost:44389/api"
 }
