--- a/SnackisAPI/appsettings.Development.json
+++ b/SnackisAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "SnackisContext": "Server=(localdb)\\mssqllocaldb;Database=SnackisAPIContext-14ba69f1-4f11-4717-bc22-3ef3107cfed2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
