--- a/SnackisAPI/appsettings.json
+++ b/SnackisAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SnackisContext": "Server=(localdb)\\mssqllocaldb;Database=SnackisAPIContext-14ba69f1-4f11-4717-bc22-3ef3107cfed2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SnackisContext": "Server=tcp:snackispg.database.windows.net,1433;Initial Catalog=SnackisForumApi-DB;Persist Security Info=False;User ID=sqladmin;Password=Kycklingpaj93;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
