--- a/SnackisWebApp/appsettings.json
+++ b/SnackisWebApp/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SnackisWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SnackisWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SnackisWebAppContextConnection": "Server=tcp:snackispg.database.windows.net,1433;Initial Catalog=SnackisWebApp-DB;Persist Security Info=False;User ID=sqladmin;Password=Kycklingpaj93;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  "SnackisAPI": "https://localhost:44389/api";
+  "SnackisAPI": "https://snackispg.azurewebsites.net/api"
 }
